container is common for 1,2,3,4 blocks

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <main class="main">
+    <main>
       <div class="container">
         <header>
           <img src="./assets/img/logo_mobile_black 1.png" alt="" class="logo" />
@@ -73,187 +73,195 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="block2">
-        <div class="block2__wrapper">
-          <div class="block2__title title">О курсе</div>
-          <div class="upper-block">
-            <div class="upper-block__paragraph-wrapper">
-              <div class="upper-block__paragraph">
-                Порой фильмы устроены сложнее четырёхтомных романов. Но читать
-                книги учат со школы, а смотреть кино — нет. При этом без
-                подготовки бывает трудно получить от просмотра удовольствие.
-              </div>
-              <div class="upper-block__paragraph">
-                На курсе из 8 занятий научимся быть осознанными зрителями.
-                Познакомимся с этапами кинопроизводства и узнаем, как смотреть
-                кино глазами сценариста, режиссёра и монтажёра. Разберёмся в
-                особенностях жанров и рассмотрим важнейшие картины, от
-                «Гражданина Кейна» до «Матрицы».
-              </div>
-            </div>
-            <div class="upper-block__img-wrapper">
-              <div class="upper-block__img">
-                <img src="./assets/img/_1 1.png" alt="" />
-              </div>
-              <div class="upper-block__shadow">
-                <img src="./assets/img/Ellipse 2.png" alt="" />
-              </div>
-            </div>
-          </div>
-          <div class="lower-block">
-            <div class="lower-block__left-img">
-              <div class="lower-block__img">
-                <img src="./assets/img/photo 1.png" alt="" />
-              </div>
-              <div class="lower-block__shadow">
-                <img src="./assets/img/Ellipse 2.png" alt="" />
-              </div>
-            </div>
-            <div class="lower-block__paragraph-wrapper">
-              <div class="lower-block__paragraph">
-                <div class="lower-block__title">8 занятий</div>
-                <div class="lower-block__text">
-                  Для погружения в кинематограф
+
+        <div class="block2">
+          <div class="block2__wrapper">
+            <div class="block2__title title">О курсе</div>
+            <div class="upper-block">
+              <div class="upper-block__paragraph-wrapper">
+                <div class="upper-block__paragraph">
+                  Порой фильмы устроены сложнее четырёхтомных романов. Но читать
+                  книги учат со школы, а смотреть кино — нет. При этом без
+                  подготовки бывает трудно получить от просмотра удовольствие.
+                </div>
+                <div class="upper-block__paragraph">
+                  На курсе из 8 занятий научимся быть осознанными зрителями.
+                  Познакомимся с этапами кинопроизводства и узнаем, как смотреть
+                  кино глазами сценариста, режиссёра и монтажёра. Разберёмся в
+                  особенностях жанров и рассмотрим важнейшие картины, от
+                  «Гражданина Кейна» до «Матрицы».
                 </div>
               </div>
-              <div class="lower-block__paragraph">
-                <div class="lower-block__title">2 часа</div>
-                <div class="lower-block__text">
-                  Длительность каждого занятия
+              <div class="upper-block__img-wrapper">
+                <div class="upper-block__img">
+                  <img src="./assets/img/_1 1.png" alt="" />
+                </div>
+                <div class="upper-block__shadow">
+                  <img src="./assets/img/Ellipse 2.png" alt="" />
                 </div>
               </div>
-              <div class="lower-block__paragraph">
-                <div class="lower-block__title">3 недели</div>
-                <div class="lower-block__text">Длительность курса</div>
+            </div>
+            <div class="lower-block">
+              <div class="lower-block__left-img">
+                <div class="lower-block__img">
+                  <img src="./assets/img/photo 1.png" alt="" />
+                </div>
+                <div class="lower-block__shadow">
+                  <img src="./assets/img/Ellipse 2.png" alt="" />
+                </div>
+              </div>
+              <div class="lower-block__paragraph-wrapper">
+                <div class="lower-block__paragraph">
+                  <div class="lower-block__title">8 занятий</div>
+                  <div class="lower-block__text">
+                    Для погружения в кинематограф
+                  </div>
+                </div>
+                <div class="lower-block__paragraph">
+                  <div class="lower-block__title">2 часа</div>
+                  <div class="lower-block__text">
+                    Длительность каждого занятия
+                  </div>
+                </div>
+                <div class="lower-block__paragraph">
+                  <div class="lower-block__title">3 недели</div>
+                  <div class="lower-block__text">Длительность курса</div>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="block3__container">
-        <div class="container_header">
-          <h1 class="block3__title">Формат занятий</h1>
-          <div class="container_header_columns">
-            <div>
-              <p class="container_header_columns_up">Вебинары</p>
-              <p class="container_header_columns_down">
-                Занятия проходят онлайн<br />
-                в режиме вебинаров<br />
-                с преподавателем
-              </p>
+        <div class="block3__container">
+          <div class="container_header">
+            <h1 class="block3__title">Формат занятий</h1>
+            <div class="container_header_columns">
+              <div>
+                <p class="container_header_columns_up">Вебинары</p>
+                <p class="container_header_columns_down">
+                  Занятия проходят онлайн<br />
+                  в режиме вебинаров<br />
+                  с преподавателем
+                </p>
+              </div>
+              <div>
+                <p class="container_header_columns_up">Доступ навсегда</p>
+                <p class="container_header_columns_down">
+                  Если вы не успели на вебинар,<br />
+                  всегда можете посмотреть<br />
+                  запись в личном кабинете
+                </p>
+              </div>
+              <div>
+                <p class="container_header_columns_up">Общение</p>
+                <p class="container_header_columns_down">
+                  Вы можете задать вопрос<br />
+                  преподавателю на занятии
+                </p>
+              </div>
             </div>
-            <div>
-              <p class="container_header_columns_up">Доступ навсегда</p>
-              <p class="container_header_columns_down">
-                Если вы не успели на вебинар,<br />
-                всегда можете посмотреть<br />
-                запись в личном кабинете
-              </p>
-            </div>
-            <div>
-              <p class="container_header_columns_up">Общение</p>
-              <p class="container_header_columns_down">
-                Вы можете задать вопрос<br />
-                преподавателю на занятии
-              </p>
-            </div>
+          </div>
+          <div class="container_footer">
+            <h1 class="block3__title">Что узнаем</h1>
+            <ul>
+              <li>Кто чем занят в съёмочной группе;</li>
+              <li>На какие этапы делится кинопроизводство;</li>
+              <li>
+                Как выглядит сценарий фильма и как он меняется<br />по ходу
+                съёмок;
+              </li>
+              <li>
+                Какими методами режиссёры заставляют нас смеяться, плакать<br />
+                и грустить;
+              </li>
+              <li>
+                Как построение кадра, музыка и свет помогают считывать
+                заложенные в<br />
+                фильм смыслы;
+              </li>
+              <li>
+                Какие жанры есть в кино и как от них зависит работа
+                операторов,<br />
+                осветителей и монтажёров;
+              </li>
+              <li>Как, зная всё это, понимать, о чем фильм.</li>
+            </ul>
           </div>
         </div>
-        <div class="container_footer">
-          <h1 class="block3__title">Что узнаем</h1>
-          <ul>
-            <li>Кто чем занят в съёмочной группе;</li>
-            <li>На какие этапы делится кинопроизводство;</li>
-            <li>
-              Как выглядит сценарий фильма и как он меняется<br />по ходу
-              съёмок;
-            </li>
-            <li>
-              Какими методами режиссёры заставляют нас смеяться, плакать<br />
-              и грустить;
-            </li>
-            <li>
-              Как построение кадра, музыка и свет помогают считывать заложенные
-              в<br />
-              фильм смыслы;
-            </li>
-            <li>
-              Какие жанры есть в кино и как от них зависит работа операторов,<br />
-              осветителей и монтажёров;
-            </li>
-            <li>Как, зная всё это, понимать, о чем фильм.</li>
-          </ul>
-        </div>
-      </div>
-      <div class="main_container-wrapper">
-        <h1 class="fourth-block__title">Программа курса</h1>
-        <div class="inn_containers">
-          <div class="inn_containers__element">
-            <img src="./assets/img/Rectangle 5.png" alt="" />
-            <p class="inn_containers__element__header">1. Как создают кино</p>
-            <p>
-              8 сентября 20:00 <br />
-              Данила Кузнецов
-            </p>
-          </div>
-          <div class="inn_containers__element">
-            <img src="./assets/img/Rectangle 7.png" alt="" />
-            <p class="inn_containers__element__header">2. Взгляд драматурга</p>
-            <p>
-              10 сентября 20:00 <br />
-              Данила Кузнецов
-            </p>
-          </div>
-          <div class="inn_containers__element">
-            <img src="./assets/img/Rectangle 9.png" alt="" />
-            <p class="inn_containers__element__header">3. Взгляд режиссёра</p>
-            <p>
-              13 сентября 13:00 <br />
-              Данила Кузнецов
-            </p>
-          </div>
-          <div class="inn_containers__element">
-            <img src="./assets/img/Rectangle 13.png" alt="" />
-            <p class="inn_containers__element__header">4. Взгляд монтажёра</p>
-            <p>
-              15 сентября 20:00 <br />
-              Данила Кузнецов
-            </p>
-          </div>
-          <div class="inn_containers__element">
-            <img src="./assets/img/Rectangle 14.png" alt="" />
-            <p class="inn_containers__element__header">5. Жанры в кино</p>
-            <p>
-              17 сентября 20:00 <br />
-              Данила Кузнецов
-            </p>
-          </div>
-          <div class="inn_containers__element">
-            <img src="./assets/img/Rectangle 15.png" alt="" />
-            <p class="inn_containers__element__header">6. Язык кино. Семинар</p>
-            <p>
-              20 сентября 13:00 <br />
-              Данила Кузнецов
-            </p>
-          </div>
-          <div class="inn_containers__element">
-            <img src="./assets/img/Rectangle 19.png" alt="" />
-            <p class="inn_containers__element__header">7. Взгляд кинокритика</p>
-            <p>
-              21 сентября 19:00 <br />
-              Дмитрий Скворцов
-            </p>
-          </div>
-          <div class="inn_containers__element">
-            <img src="./assets/img/Rectangle 20.png" alt="" />
-            <p class="inn_containers__element__header">
-              8. Осознанный зритель. Семинар
-            </p>
-            <p style="margin-top: -3px">
-              22 сентября 19:00 <br />
-              Дмитрий Скворцов
-            </p>
+        <div class="main_container-wrapper">
+          <h1 class="fourth-block__title">Программа курса</h1>
+          <div class="inn_containers">
+            <div class="inn_containers__element">
+              <img src="./assets/img/Rectangle 5.png" alt="" />
+              <p class="inn_containers__element__header">1. Как создают кино</p>
+              <p>
+                8 сентября 20:00 <br />
+                Данила Кузнецов
+              </p>
+            </div>
+            <div class="inn_containers__element">
+              <img src="./assets/img/Rectangle 7.png" alt="" />
+              <p class="inn_containers__element__header">
+                2. Взгляд драматурга
+              </p>
+              <p>
+                10 сентября 20:00 <br />
+                Данила Кузнецов
+              </p>
+            </div>
+            <div class="inn_containers__element">
+              <img src="./assets/img/Rectangle 9.png" alt="" />
+              <p class="inn_containers__element__header">3. Взгляд режиссёра</p>
+              <p>
+                13 сентября 13:00 <br />
+                Данила Кузнецов
+              </p>
+            </div>
+            <div class="inn_containers__element">
+              <img src="./assets/img/Rectangle 13.png" alt="" />
+              <p class="inn_containers__element__header">4. Взгляд монтажёра</p>
+              <p>
+                15 сентября 20:00 <br />
+                Данила Кузнецов
+              </p>
+            </div>
+            <div class="inn_containers__element">
+              <img src="./assets/img/Rectangle 14.png" alt="" />
+              <p class="inn_containers__element__header">5. Жанры в кино</p>
+              <p>
+                17 сентября 20:00 <br />
+                Данила Кузнецов
+              </p>
+            </div>
+            <div class="inn_containers__element">
+              <img src="./assets/img/Rectangle 15.png" alt="" />
+              <p class="inn_containers__element__header">
+                6. Язык кино. Семинар
+              </p>
+              <p>
+                20 сентября 13:00 <br />
+                Данила Кузнецов
+              </p>
+            </div>
+            <div class="inn_containers__element">
+              <img src="./assets/img/Rectangle 19.png" alt="" />
+              <p class="inn_containers__element__header">
+                7. Взгляд кинокритика
+              </p>
+              <p>
+                21 сентября 19:00 <br />
+                Дмитрий Скворцов
+              </p>
+            </div>
+            <div class="inn_containers__element">
+              <img src="./assets/img/Rectangle 20.png" alt="" />
+              <p class="inn_containers__element__header">
+                8. Осознанный зритель. Семинар
+              </p>
+              <p style="margin-top: -3px">
+                22 сентября 19:00 <br />
+                Дмитрий Скворцов
+              </p>
+            </div>
           </div>
         </div>
       </div>
