--- a/src/index.html
+++ b/src/index.html
@@ -75,14 +75,14 @@
         </div>
 <!---------------------------------------- block2----------------------------------------------------- -->
         <div class="block2__title">О курсе</div>
-        <div class="upper-block">
-          <div class="upper-block__paragraph-wrapper">
-            <div class="upper-block__paragraph">
+        <div class="block2-upper">
+          <div class="block2-upper__paragraph-wrapper">
+            <div class="block2-upper__paragraph">
               Порой фильмы устроены сложнее четырёхтомных романов. Но читать
               книги учат со школы, а смотреть кино — нет. При этом без
               подготовки бывает трудно получить от просмотра удовольствие.
             </div>
-            <div class="upper-block__paragraph">
+            <div class="block2-upper__paragraph">
               На курсе из 8 занятий научимся быть осознанными зрителями.
               Познакомимся с этапами кинопроизводства и узнаем, как смотреть
               кино глазами сценариста, режиссёра и монтажёра. Разберёмся в
@@ -90,36 +90,36 @@
               Кейна» до «Матрицы».
             </div>
           </div>
-          <div class="upper-block__img-wrapper">
-            <div class="upper-block__img">
+          <div class="block2-upper__img-wrapper">
+            <div class="block2-upper__img">
               <img src="./assets/img/_1 1.png" alt="" />
             </div>
-            <div class="upper-block__shadow">
+            <div class="block2-upper__shadow">
               <img src="./assets/img/Ellipse 2.png" alt="" />
             </div>
           </div>
         </div>
-        <div class="lower-block">
-          <div class="lower-block__left-img">
-            <div class="lower-block__img">
+        <div class="block2-lower">
+          <div class="block2-lower__left-img">
+            <div class="block2-lower__img">
               <img src="./assets/img/photo 1.png" alt="" />
             </div>
-            <div class="lower-block__shadow">
+            <div class="block2-lower__shadow">
               <img src="./assets/img/Ellipse 2.png" alt="" />
             </div>
           </div>
-          <div class="lower-block__paragraph-wrapper">
-            <div class="lower-block__paragraph">
-              <div class="lower-block__title">8 занятий</div>
-              <div class="lower-block__text">Для погружения в кинематограф</div>
+          <div class="block2-lower__paragraph-wrapper">
+            <div class="block2-lower__paragraph">
+              <div class="block2-lower__title">8 занятий</div>
+              <div class="block2-lower__text">Для погружения в кинематограф</div>
             </div>
-            <div class="lower-block__paragraph">
-              <div class="lower-block__title">2 часа</div>
-              <div class="lower-block__text">Длительность каждого занятия</div>
+            <div class="block2-lower__paragraph">
+              <div class="block2-lower__title">2 часа</div>
+              <div class="block2-lower__text">Длительность каждого занятия</div>
             </div>
-            <div class="lower-block__paragraph">
-              <div class="lower-block__title">3 недели</div>
-              <div class="lower-block__text">Длительность курса</div>
+            <div class="block2-lower__paragraph">
+              <div class="block2-lower__title">3 недели</div>
+              <div class="block2-lower__text">Длительность курса</div>
             </div>
           </div>
         </div>
