--- a/src/index.html
+++ b/src/index.html
@@ -9,78 +9,78 @@
   </head>
   <body>
     <main>
-      <div class="main_container-wrapper">
-        <h1 class="header">Программа курса</h1>
-        <div class="inn_containers">
-          <div class="inn_containers__element">
-            <img src="./assets/img/Rectangle 5.png" alt="" />
-            <p
-              class="inn_containers__element__header"
-              style="font-size: 17px; font-weight: 700; line-height: 22px"
-            >
-              1. Как создают кино
-            </p>
-            <p>
-              8 сентября 20:00 <br />
-              Данила Кузнецов
-            </p>
-          </div>
-          <div class="inn_containers__element">
-            <img src="./assets/img/Rectangle 7.png" alt="" />
-            <p class="inn_containers__element__header">2. Взгляд драматурга</p>
-            <p>
-              10 сентября 20:00 <br />
-              Данила Кузнецов
-            </p>
-          </div>
-          <div class="inn_containers__element">
-            <img src="./assets/img/Rectangle 9.png" alt="" />
-            <p class="inn_containers__element__header">3. Взгляд режиссёра</p>
-            <p>
-              13 сентября 13:00 <br />
-              Данила Кузнецов
-            </p>
-          </div>
-          <div class="inn_containers__element">
-            <img src="./assets/img/Rectangle 13.png" alt="" />
-            <p class="inn_containers__element__header">4. Взгляд монтажёра</p>
-            <p>
-              15 сентября 20:00 <br />
-              Данила Кузнецов
-            </p>
-          </div>
-          <div class="inn_containers__element">
-            <img src="./assets/img/Rectangle 14.png" alt="" />
-            <p class="inn_containers__element__header">5. Жанры в кино</p>
-            <p>
-              17 сентября 20:00 <br />
-              Данила Кузнецов
-            </p>
-          </div>
-          <div class="inn_containers__element">
-            <img src="./assets/img/Rectangle 15.png" alt="" />
-            <p class="inn_containers__element__header">6. Язык кино. Семинар</p>
-            <p>
-              20 сентября 13:00 <br />
-              Данила Кузнецов
-            </p>
-          </div>
-          <div class="inn_containers__element">
-            <img src="./assets/img/Rectangle 19.png" alt="" />
-            <p class="inn_containers__element__header">7. Взгляд кинокритика</p>
-            <p>
-              21 сентября 19:00 <br />
-              Дмитрий Скворцов
-            </p>
-          </div>
-          <div class="inn_containers__element">
-            <img src="./assets/img/Rectangle 20.png" alt="" />
-            <p class="inn_containers__element__header">8. Осознанный зритель. Семинар</p>
-            <p style="margin-top: -3px">
-              22 сентября 19:00 <br />
-              Дмитрий Скворцов
-            </p>
-          </div>
+      <h1 class="header">Программа курса</h1>
+      <div class="inn_containers">
+        <div class="inn_containers__element">
+          <img src="./assets/img/Rectangle 5.png" alt="" />
+          <p
+            class="inn_containers__element__header"
+            style="font-size: 17px; font-weight: 700; line-height: 22px"
+          >
+            1. Как создают кино
+          </p>
+          <p>
+            8 сентября 20:00 <br />
+            Данила Кузнецов
+          </p>
+        </div>
+        <div class="inn_containers__element">
+          <img src="./assets/img/Rectangle 7.png" alt="" />
+          <p class="inn_containers__element__header">2. Взгляд драматурга</p>
+          <p>
+            10 сентября 20:00 <br />
+            Данила Кузнецов
+          </p>
+        </div>
+        <div class="inn_containers__element">
+          <img src="./assets/img/Rectangle 9.png" alt="" />
+          <p class="inn_containers__element__header">3. Взгляд режиссёра</p>
+          <p>
+            13 сентября 13:00 <br />
+            Данила Кузнецов
+          </p>
+        </div>
+        <div class="inn_containers__element">
+          <img src="./assets/img/Rectangle 13.png" alt="" />
+          <p class="inn_containers__element__header">4. Взгляд монтажёра</p>
+          <p>
+            15 сентября 20:00 <br />
+            Данила Кузнецов
+          </p>
+        </div>
+        <div class="inn_containers__element">
+          <img src="./assets/img/Rectangle 14.png" alt="" />
+          <p class="inn_containers__element__header">5. Жанры в кино</p>
+          <p>
+            17 сентября 20:00 <br />
+            Данила Кузнецов
+          </p>
+        </div>
+        <div class="inn_containers__element">
+          <img src="./assets/img/Rectangle 15.png" alt="" />
+          <p class="inn_containers__element__header">6. Язык кино. Семинар</p>
+          <p>
+            20 сентября 13:00 <br />
+            Данила Кузнецов
+          </p>
+        </div>
+        <div class="inn_containers__element">
+          <img src="./assets/img/Rectangle 19.png" alt="" />
+          <p class="inn_containers__element__header">7. Взгляд кинокритика</p>
+          <p>
+            21 сентября 19:00 <br />
+            Дмитрий Скворцов
+          </p>
+        </div>
+        <div class="inn_containers__element">
+          <img src="./assets/img/Rectangle 20.png" alt="" />
+          <p class="inn_containers__element__header">
+            8. Осознанный зритель. Семинар
+          </p>
+          <p style="margin-top: -3px">
+            22 сентября 19:00 <br />
+            Дмитрий Скворцов
+          </p>
         </div>
       </div>
     </main>
