--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
           <div class="first-block__elements-wrapper">
             <div class="first-block__element">
               <img src="./assets/img/globe.svg" alt="globe" class="globe" />
-              <p class="first-block__p">онлайн-курс</p>
+              <p class="first-block__p-element">онлайн-курс</p>
             </div>
             <div class="first-block__element">
               <img
@@ -25,7 +25,7 @@
                 alt="clock"
                 class="clock"
               />
-              <p class="first-block__p">18 часов</p>
+              <p class="first-block__p-element">18 часов</p>
             </div>
             <div class="first-block__element">
               <img
@@ -33,19 +33,15 @@
                 alt="calendar"
                 class="calendar"
               />
-              <p class="first-block__p">8 сентября</p>
+              <p class="first-block__p-element">8 сентября</p>
             </div>
           </div>
           <div class="first-block__text-wrapper">
             <div class="first-block__text">
-              <div class="first-block__h-wrapper">
-                <p class="first-block__h">Как смотреть кино</p>
-              </div>
-              <div class="first-block__p-wrapper">
-                <p class="first-block__p-text">
-                  За 8 занятий станем активными зрителями и разберёмся в
-                  кинопроцессе
-                </p>
+              <div class="first-block__h">Как смотреть кино</div>
+              <div class="first-block__p">
+                За 8 занятий станем активными зрителями и разберёмся в
+                кинопроцессе
               </div>
             </div>
             <div class="first-block__img-wrapper">
@@ -73,7 +69,7 @@
             </div>
           </div>
         </div>
-<!---------------------------------------- block2----------------------------------------------------- -->
+        <!---------------------------------------- block2----------------------------------------------------- -->
         <div class="block2__title">О курсе</div>
         <div class="block2-upper">
           <div class="block2-upper__paragraph-wrapper">
@@ -111,7 +107,9 @@
           <div class="block2-lower__paragraph-wrapper">
             <div class="block2-lower__paragraph">
               <div class="block2-lower__title">8 занятий</div>
-              <div class="block2-lower__text">Для погружения в кинематограф</div>
+              <div class="block2-lower__text">
+                Для погружения в кинематограф
+              </div>
             </div>
             <div class="block2-lower__paragraph">
               <div class="block2-lower__title">2 часа</div>
@@ -123,7 +121,7 @@
             </div>
           </div>
         </div>
-<!-- -------------------------------------------------------------------------------------- -->
+        <!-- -------------------------------------------------------------------------------------- -->
         <div class="block3__container">
           <div class="container_header">
             <h1 class="block3__title">Формат занятий</h1>
