--- a/src/index.html
+++ b/src/index.html
@@ -132,57 +132,57 @@
         </div>
       </div>
       <div class="block3__container">
-        <div class="container_header">
-          <h1>Формат занятий</h1>
-          <div class="container_header_columns">
+        <div class="container__header">
+          <h1 class="container__header__title">Формат занятий</h1>
+          <div class="container__header__columns">
             <div>
-              <p class="container_header_columns_up">Вебинары</p>
-              <p class="container_header_columns_down">
+              <p class="container__header__columns__up">Вебинары</p>
+              <p class="container__header__columns__down">
                 Занятия проходят онлайн<br />
                 в режиме вебинаров<br />
                 с преподавателем
               </p>
             </div>
             <div>
-              <p class="container_header_columns_up">Доступ навсегда</p>
-              <p class="container_header_columns_down">
+              <p class="container__header__columns__up">Доступ навсегда</p>
+              <p class="container__header__columns__down">
                 Если вы не успели на вебинар,<br />
                 всегда можете посмотреть<br />
                 запись в личном кабинете
               </p>
             </div>
             <div>
-              <p class="container_header_columns_up">Общение</p>
-              <p class="container_header_columns_down">
+              <p class="container__header__columns__up">Общение</p>
+              <p class="container__header__columns__down">
                 Вы можете задать вопрос<br />
                 преподавателю на занятии
               </p>
             </div>
           </div>
         </div>
-        <div class="container_footer">
-          <h1>Что узнаем</h1>
-          <ul>
-            <li>Кто чем занят в съёмочной группе;</li>
-            <li>На какие этапы делится кинопроизводство;</li>
-            <li>
+        <div class="container__footer">
+          <h1 class="container__footer__title">Что узнаем</h1>
+          <ul class="container__footer__questions">
+            <li class="container__footer__question__items">Кто чем занят в съёмочной группе;</li>
+            <li class="container__footer__question__items">На какие этапы делится кинопроизводство;</li>
+            <li class="container__footer__question__items">
               Как выглядит сценарий фильма и как он меняется<br />по ходу
               съёмок;
             </li>
-            <li>
+            <li class="container__footer__question__items">
               Какими методами режиссёры заставляют нас смеяться, плакать<br />
               и грустить;
             </li>
-            <li>
+            <li class="container__footer__question__items">
               Как построение кадра, музыка и свет помогают считывать заложенные
               в<br />
               фильм смыслы;
             </li>
-            <li>
+            <li class="container__footer__question__items">
               Какие жанры есть в кино и как от них зависит работа операторов,<br />
               осветителей и монтажёров;
             </li>
-            <li>Как, зная всё это, понимать, о чем фильм.</li>
+            <li class="container__footer__question__items">Как, зная всё это, понимать, о чем фильм.</li>  
           </ul>
         </div>
       </div>
