--- a/src/index.html
+++ b/src/index.html
@@ -268,14 +268,14 @@
               режиссера, оператора, монтажера и т.д. Спасибо!
             </div>
             <div class="block5__card-social">
-              <div class="block5__card-social__photo">
+              <div class="block5-social__photo">
                 <img src="./assets/img/1 9.png" alt="" />
               </div>
-              <div class="block5__card-social__meta">
-                <div class="block5__card-social__meta-name">
+              <div class="block5-social__meta">
+                <div class="block5-social__meta-name">
                   <p>Екатерина Палехова</p>
                 </div>
-                <div class="block5__card-social__meta-icon">
+                <div class="block5-social__meta-icon">
                   <img src="./assets/img/fb_2 1.png" alt="" />
                 </div>
               </div>
