--- a/src/index.html
+++ b/src/index.html
@@ -184,7 +184,7 @@
       <div class="block4">
         <h1 class="block4__title">Программа курса</h1>
         <div class="block4__cards">
-          <div class="block4__cards__element">
+          <div class="block4__element">
             <img src="./assets/img/Rectangle 5.png" alt="" />
             <p class="block4__cards-header"> 1. Как создают кино</p>
             <p>
@@ -192,7 +192,7 @@
               Данила Кузнецов
             </p>
           </div>
-          <div class="block4__cards__element">
+          <div class="block4__element">
             <img src="./assets/img/Rectangle 7.png" alt="" />
             <p class="block4__cards-header">2. Взгляд драматурга</p>
             <p>
@@ -200,7 +200,7 @@
               Данила Кузнецов
             </p>
           </div>
-          <div class="block4__cards__element">
+          <div class="block4__element">
             <img src="./assets/img/Rectangle 9.png" alt="" />
             <p class="block4__cards-header">3. Взгляд режиссёра</p>
             <p>
@@ -208,7 +208,7 @@
               Данила Кузнецов
             </p>
           </div>
-          <div class="block4__cards__element">
+          <div class="block4__element">
             <img src="./assets/img/Rectangle 13.png" alt="" />
             <p class="block4__cards-header">4. Взгляд монтажёра</p>
             <p>
@@ -216,7 +216,7 @@
               Данила Кузнецов
             </p>
           </div>
-          <div class="block4__cards__element">
+          <div class="block4__element">
             <img src="./assets/img/Rectangle 14.png" alt="" />
             <p class="block4__cards-header">5. Жанры в кино</p>
             <p>
@@ -224,7 +224,7 @@
               Данила Кузнецов
             </p>
           </div>
-          <div class="block4__cards__element">
+          <div class="block4__element">
             <img src="./assets/img/Rectangle 15.png" alt="" />
             <p class="block4__cards-header">6. Язык кино. Семинар</p>
             <p>
@@ -232,7 +232,7 @@
               Данила Кузнецов
             </p>
           </div>
-          <div class="block4__cards__element">
+          <div class="block4__element">
             <img src="./assets/img/Rectangle 19.png" alt="" />
             <p class="block4__cards-header">7. Взгляд кинокритика</p>
             <p>
@@ -240,7 +240,7 @@
               Дмитрий Скворцов
             </p>
           </div>
-          <div class="block4__cards__element">
+          <div class="block4__element">
             <img src="./assets/img/Rectangle 20.png" alt="" />
             <p class="block4__cards-header">
               8. Осознанный зритель. Семинар
