--- a/src/index.html
+++ b/src/index.html
@@ -131,58 +131,64 @@
           </div>
         </div>
       </div>
-      <div class="block3__container">
-        <div class="container__header">
-          <h1 class="container__header__title">Формат занятий</h1>
-          <div class="container__header__columns">
+      <div class="block3__container container">
+        <div class="block3__header">
+          <h1 class="block3__title">Формат занятий</h1>
+          <div class="block3__header-columns">
             <div>
-              <p class="container__header__columns__up">Вебинары</p>
-              <p class="container__header__columns__down">
+              <p class="block3__columns-up">Вебинары</p>
+              <p class="block3__columns-down">
                 Занятия проходят онлайн<br />
                 в режиме вебинаров<br />
                 с преподавателем
               </p>
             </div>
             <div>
-              <p class="container__header__columns__up">Доступ навсегда</p>
-              <p class="container__header__columns__down">
+              <p class="block3__columns-up">Доступ навсегда</p>
+              <p class="block3__columns-down">
                 Если вы не успели на вебинар,<br />
                 всегда можете посмотреть<br />
                 запись в личном кабинете
               </p>
             </div>
             <div>
-              <p class="container__header__columns__up">Общение</p>
-              <p class="container__header__columns__down">
+              <p class="block3__columns-up">Общение</p>
+              <p class="block3__columns-down">
                 Вы можете задать вопрос<br />
                 преподавателю на занятии
               </p>
             </div>
           </div>
         </div>
-        <div class="container__footer">
-          <h1 class="container__footer__title">Что узнаем</h1>
-          <ul class="container__footer__questions">
-            <li class="container__footer__question__items">Кто чем занят в съёмочной группе;</li>
-            <li class="container__footer__question__items">На какие этапы делится кинопроизводство;</li>
-            <li class="container__footer__question__items">
+        <div class="block3__footer">
+          <h1 class="block3__title">Что узнаем</h1>
+          <ul class="block3__questions">
+            <li class="block3__question-items">
+              Кто чем занят в съёмочной группе;
+            </li>
+            <li class="block3__question-items">
+              На какие этапы делится кинопроизводство;
+            </li>
+            <li class="block3__question-items">
               Как выглядит сценарий фильма и как он меняется<br />по ходу
               съёмок;
             </li>
-            <li class="container__footer__question__items">
+            <li class="block3__question-items">
               Какими методами режиссёры заставляют нас смеяться, плакать<br />
               и грустить;
             </li>
-            <li class="container__footer__question__items">
+            <li class="block3__question-items">
               Как построение кадра, музыка и свет помогают считывать заложенные
               в<br />
               фильм смыслы;
             </li>
-            <li class="container__footer__question__items">
+            <li class="block3__question-items">
               Какие жанры есть в кино и как от них зависит работа операторов,<br />
               осветителей и монтажёров;
             </li>
-            <li class="container__footer__question__items">Как, зная всё это, понимать, о чем фильм.</li>  
+            <li class="block3__question-items">
+              Как, зная всё это, понимать, о чем фильм.
+            </li>
           </ul>
         </div>
       </div>
