--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,11 @@
     <title>Document</title>
   </head>
   <body>
+    <header class="header-logo container">
+      <img src="./assets/img/logo_mobile_black 1.png" alt="" class="logo" />
+    </header>
     <main>
       <div class="container">
-        <header>
-          <img src="./assets/img/logo_mobile_black 1.png" alt="" class="logo" />
-        </header>
         <div class="first-block">
           <div class="first-block__elements-wrapper">
             <div class="first-block__element">
@@ -69,7 +69,7 @@
             </div>
           </div>
         </div>
-        <!---------------------------------------- block2----------------------------------------------------- -->
+        <!---------------------------------------- block2------------------------------------------------------->
         <div class="block2__title">О курсе</div>
         <div class="block2-upper">
           <div class="block2-upper__paragraph-wrapper">
@@ -95,8 +95,33 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="block3__container container">
+        <div class="block2-lower">
+          <div class="block2-lower__left-img">
+            <div class="block2-lower__img">
+              <img src="./assets/img/photo 1.png" alt="" />
+            </div>
+            <div class="block2-lower__shadow">
+              <img src="./assets/img/Ellipse 2.png" alt="" />
+            </div>
+          </div>
+          <div class="block2-lower__paragraph-wrapper">
+            <div class="block2-lower__paragraph">
+              <div class="block2-lower__title">8 занятий</div>
+              <div class="block2-lower__text">
+                Для погружения в кинематограф
+              </div>
+            </div>
+            <div class="block2-lower__paragraph">
+              <div class="block2-lower__title">2 часа</div>
+              <div class="block2-lower__text">Длительность каждого занятия</div>
+            </div>
+            <div class="block2-lower__paragraph">
+              <div class="block2-lower__title">3 недели</div>
+              <div class="block2-lower__text">Длительность курса</div>
+            </div>
+          </div>
+        </div>
+        <!-- --------------------------------------------------block3--------------------------------------- -->
         <div class="block3__header">
           <h1 class="block3__title">Формат занятий</h1>
           <div class="block3__header-columns">
@@ -157,14 +182,12 @@
           </ul>
         </div>
       </div>
-
-      <!-- 4 block -->
       <div class="block4">
         <h1 class="block4__title">Программа курса</h1>
         <div class="block4__cards">
           <div class="block4__element">
             <img src="./assets/img/Rectangle 5.png" alt="" />
-            <p class="block4__cards-header"> 1. Как создают кино</p>
+            <p class="block4__cards-header">1. Как создают кино</p>
             <p>
               8 сентября 20:00 <br />
               Данила Кузнецов
@@ -224,9 +247,7 @@
           </div>
           <div class="block4__element">
             <img src="./assets/img/Rectangle 20.png" alt="" />
-            <p class="block4__cards-header">
-              8. Осознанный зритель. Семинар
-            </p>
+            <p class="block4__cards-header">8. Осознанный зритель. Семинар</p>
             <p style="margin-top: -3px">
               22 сентября 19:00 <br />
               Дмитрий Скворцов
@@ -234,7 +255,6 @@
           </div>
         </div>
       </div>
-      <!-- 5 block -->
       <div class="block5">
         <div class="block5_wrapper">
           <div>
