--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
       <img src="./assets/img/logo_mobile_black 1.png" alt="" class="logo" />
     </header>
     <main>
-      <div class="container">
-        <div class="first-block">
+      <div class="first-block">
+        <div class="first-block__container container">
           <div class="first-block__elements-wrapper">
             <div class="first-block__element">
               <img src="./assets/img/globe.svg" alt="globe" class="globe" />
@@ -69,117 +69,126 @@
             </div>
           </div>
         </div>
-        <!---------------------------------------- block2------------------------------------------------------->
-        <div class="block2__title">О курсе</div>
-        <div class="block2-upper">
-          <div class="block2-upper__paragraph-wrapper">
-            <div class="block2-upper__paragraph">
-              Порой фильмы устроены сложнее четырёхтомных романов. Но читать
-              книги учат со школы, а смотреть кино — нет. При этом без
-              подготовки бывает трудно получить от просмотра удовольствие.
-            </div>
-            <div class="block2-upper__paragraph">
-              На курсе из 8 занятий научимся быть осознанными зрителями.
-              Познакомимся с этапами кинопроизводства и узнаем, как смотреть
-              кино глазами сценариста, режиссёра и монтажёра. Разберёмся в
-              особенностях жанров и рассмотрим важнейшие картины, от «Гражданина
-              Кейна» до «Матрицы».
-            </div>
-          </div>
-          <div class="block2-upper__img-wrapper">
-            <div class="block2-upper__img">
-              <img src="./assets/img/_1 1.png" alt="" />
-            </div>
-            <div class="block2-upper__shadow">
-              <img src="./assets/img/Ellipse 2.png" alt="" />
-            </div>
-          </div>
-        </div>
-        <div class="block2-lower">
-          <div class="block2-lower__left-img">
-            <div class="block2-lower__img">
-              <img src="./assets/img/photo 1.png" alt="" />
-            </div>
-            <div class="block2-lower__shadow">
-              <img src="./assets/img/Ellipse 2.png" alt="" />
-            </div>
-          </div>
-          <div class="block2-lower__paragraph-wrapper">
-            <div class="block2-lower__paragraph">
-              <div class="block2-lower__title">8 занятий</div>
-              <div class="block2-lower__text">
-                Для погружения в кинематограф
+      </div>
+      <div class="block2">
+        <div class="block2__container container">
+          <div class="block2__title">О курсе</div>
+          <div class="block2-upper">
+            <div class="block2-upper__paragraph-wrapper">
+              <div class="block2-upper__paragraph">
+                Порой фильмы устроены сложнее четырёхтомных романов. Но читать
+                книги учат со школы, а смотреть кино — нет. При этом без
+                подготовки бывает трудно получить от просмотра удовольствие.
+              </div>
+              <div class="block2-upper__paragraph">
+                На курсе из 8 занятий научимся быть осознанными зрителями.
+                Познакомимся с этапами кинопроизводства и узнаем, как смотреть
+                кино глазами сценариста, режиссёра и монтажёра. Разберёмся в
+                особенностях жанров и рассмотрим важнейшие картины, от
+                «Гражданина Кейна» до «Матрицы».
               </div>
             </div>
-            <div class="block2-lower__paragraph">
-              <div class="block2-lower__title">2 часа</div>
-              <div class="block2-lower__text">Длительность каждого занятия</div>
+            <div class="block2-upper__img-wrapper">
+              <div class="block2-upper__img">
+                <img src="./assets/img/_1 1.png" alt="" />
+              </div>
+              <div class="block2-upper__shadow">
+                <img src="./assets/img/Ellipse 2.png" alt="" />
+              </div>
             </div>
-            <div class="block2-lower__paragraph">
-              <div class="block2-lower__title">3 недели</div>
-              <div class="block2-lower__text">Длительность курса</div>
+          </div>
+          <div class="block2-lower">
+            <div class="block2-lower__left-img">
+              <div class="block2-lower__img">
+                <img src="./assets/img/photo 1.png" alt="" />
+              </div>
+              <div class="block2-lower__shadow">
+                <img src="./assets/img/Ellipse 2.png" alt="" />
+              </div>
+            </div>
+            <div class="block2-lower__paragraph-wrapper">
+              <div class="block2-lower__paragraph">
+                <div class="block2-lower__title">8 занятий</div>
+                <div class="block2-lower__text">
+                  Для погружения в кинематограф
+                </div>
+              </div>
+              <div class="block2-lower__paragraph">
+                <div class="block2-lower__title">2 часа</div>
+                <div class="block2-lower__text">
+                  Длительность каждого занятия
+                </div>
+              </div>
+              <div class="block2-lower__paragraph">
+                <div class="block2-lower__title">3 недели</div>
+                <div class="block2-lower__text">Длительность курса</div>
+              </div>
             </div>
           </div>
         </div>
-        <!-- --------------------------------------------------block3--------------------------------------- -->
-        <div class="block3__header">
-          <h1 class="block3__title">Формат занятий</h1>
-          <div class="block3__header-columns">
-            <div>
-              <p class="block3__columns-up">Вебинары</p>
-              <p class="block3__columns-down">
-                Занятия проходят онлайн<br />
-                в режиме вебинаров<br />
-                с преподавателем
-              </p>
-            </div>
-            <div>
-              <p class="block3__columns-up">Доступ навсегда</p>
-              <p class="block3__columns-down">
-                Если вы не успели на вебинар,<br />
-                всегда можете посмотреть<br />
-                запись в личном кабинете
-              </p>
-            </div>
-            <div>
-              <p class="block3__columns-up">Общение</p>
-              <p class="block3__columns-down">
-                Вы можете задать вопрос<br />
-                преподавателю на занятии
-              </p>
+      </div>
+      <div class="block3">
+        <div class="block3__container container">
+          <div class="block3__header">
+            <h1 class="block3__title">Формат занятий</h1>
+            <div class="block3__header-columns">
+              <div>
+                <p class="block3__columns-up">Вебинары</p>
+                <p class="block3__columns-down">
+                  Занятия проходят онлайн<br />
+                  в режиме вебинаров<br />
+                  с преподавателем
+                </p>
+              </div>
+              <div>
+                <p class="block3__columns-up">Доступ навсегда</p>
+                <p class="block3__columns-down">
+                  Если вы не успели на вебинар,<br />
+                  всегда можете посмотреть<br />
+                  запись в личном кабинете
+                </p>
+              </div>
+              <div>
+                <p class="block3__columns-up">Общение</p>
+                <p class="block3__columns-down">
+                  Вы можете задать вопрос<br />
+                  преподавателю на занятии
+                </p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="block3__footer">
-          <h1 class="block3__title">Что узнаем</h1>
-          <ul class="block3__questions">
-            <li class="block3__question-items">
-              Кто чем занят в съёмочной группе;
-            </li>
-            <li class="block3__question-items">
-              На какие этапы делится кинопроизводство;
-            </li>
-            <li class="block3__question-items">
-              Как выглядит сценарий фильма и как он меняется<br />по ходу
-              съёмок;
-            </li>
-            <li class="block3__question-items">
-              Какими методами режиссёры заставляют нас смеяться, плакать<br />
-              и грустить;
-            </li>
-            <li class="block3__question-items">
-              Как построение кадра, музыка и свет помогают считывать заложенные
-              в<br />
-              фильм смыслы;
-            </li>
-            <li class="block3__question-items">
-              Какие жанры есть в кино и как от них зависит работа операторов,<br />
-              осветителей и монтажёров;
-            </li>
-            <li class="block3__question-items">
-              Как, зная всё это, понимать, о чем фильм.
-            </li>
-          </ul>
+          <div class="block3__footer">
+            <h1 class="block3__title">Что узнаем</h1>
+            <ul class="block3__questions">
+              <li class="block3__question-items">
+                Кто чем занят в съёмочной группе;
+              </li>
+              <li class="block3__question-items">
+                На какие этапы делится кинопроизводство;
+              </li>
+              <li class="block3__question-items">
+                Как выглядит сценарий фильма и как он меняется<br />по ходу
+                съёмок;
+              </li>
+              <li class="block3__question-items">
+                Какими методами режиссёры заставляют нас смеяться, плакать<br />
+                и грустить;
+              </li>
+              <li class="block3__question-items">
+                Как построение кадра, музыка и свет помогают считывать
+                заложенные в<br />
+                фильм смыслы;
+              </li>
+              <li class="block3__question-items">
+                Какие жанры есть в кино и как от них зависит работа
+                операторов,<br />
+                осветителей и монтажёров;
+              </li>
+              <li class="block3__question-items">
+                Как, зная всё это, понимать, о чем фильм.
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
       <div class="block4">
@@ -256,7 +265,7 @@
         </div>
       </div>
       <div class="block5">
-        <div class="block5_wrapper">
+        <div class="block5__container">
           <div>
             <h1 class="block5__header">Курс прошло уже 1616 человек</h1>
           </div>
