--- a/src/index.html
+++ b/src/index.html
@@ -265,7 +265,7 @@
         </div>
       </div>
       <div class="block5">
-        <div class="block5__container">
+        <div class="block5__container container">
           <div>
             <h1 class="block5__header">Курс прошло уже 1616 человек</h1>
           </div>
