--- a/src/index.html
+++ b/src/index.html
@@ -192,80 +192,78 @@
         </div>
       </div>
       <div class="block4">
-        <h1 class="block4__title">Программа курса</h1>
-        <div class="block4__cards">
-          <div class="block4__element">
-            <img src="./assets/img/Rectangle 5.png" alt="" />
-            <p class="block4__cards-header">1. Как создают кино</p>
-            <p>
-              8 сентября 20:00 <br />
-              Данила Кузнецов
-            </p>
-          </div>
-          <div class="block4__element">
-            <img src="./assets/img/Rectangle 7.png" alt="" />
-            <p class="block4__cards-header">2. Взгляд драматурга</p>
-            <p>
-              10 сентября 20:00 <br />
-              Данила Кузнецов
-            </p>
-          </div>
-
-          <div class="block4__element">
-            <img src="./assets/img/Rectangle 9.png" alt="" />
-            <p class="block4__cards-header">3. Взгляд режиссёра</p>
-            <p>
-              13 сентября 13:00 <br />
-              Данила Кузнецов
-            </p>
-          </div>
-
-          <div class="block4__element">
-            <img src="./assets/img/Rectangle 13.png" alt="" />
-            <p class="block4__cards-header">4. Взгляд монтажёра</p>
-
-            <p>
-              15 сентября 20:00 <br />
-              Данила Кузнецов
-            </p>
-          </div>
-
-          <div class="block4__element">
-            <img src="./assets/img/Rectangle 14.png" alt="" />
-            <p class="block4__cards-header">5. Жанры в кино</p>
-            <p>
-              17 сентября 20:00 <br />
-              Данила Кузнецов
-            </p>
-          </div>
-          <div class="block4__element">
-            <img src="./assets/img/Rectangle 15.png" alt="" />
-            <p class="block4__cards-header">6. Язык кино. Семинар</p>
-            <p>
-              20 сентября 13:00 <br />
-              Данила Кузнецов
-            </p>
-          </div>
-          <div class="block4__element">
-            <img src="./assets/img/Rectangle 19.png" alt="" />
-            <p class="block4__cards-header">7. Взгляд кинокритика</p>
-            <p>
-              21 сентября 19:00 <br />
-              Дмитрий Скворцов
-            </p>
-          </div>
-          <div class="block4__element">
-            <img src="./assets/img/Rectangle 20.png" alt="" />
-            <p class="block4__cards-header">8. Осознанный зритель. Семинар</p>
-            <p style="margin-top: -3px">
-              22 сентября 19:00 <br />
-              Дмитрий Скворцов
-            </p>
+        <div class="block4__container">
+          <h1 class="block4__title">Программа курса</h1>
+          <div class="block4__cards">
+            <div class="block4__element">
+              <img src="./assets/img/Rectangle 5.png" alt="" />
+              <p class="block4__cards-header">1. Как создают кино</p>
+              <p>
+                8 сентября 20:00 <br />
+                Данила Кузнецов
+              </p>
+            </div>
+            <div class="block4__element">
+              <img src="./assets/img/Rectangle 7.png" alt="" />
+              <p class="block4__cards-header">2. Взгляд драматурга</p>
+              <p>
+                10 сентября 20:00 <br />
+                Данила Кузнецов
+              </p>
+            </div>
+            <div class="block4__element">
+              <img src="./assets/img/Rectangle 9.png" alt="" />
+              <p class="block4__cards-header">3. Взгляд режиссёра</p>
+              <p>
+                13 сентября 13:00 <br />
+                Данила Кузнецов
+              </p>
+            </div>
+            <div class="block4__element">
+              <img src="./assets/img/Rectangle 13.png" alt="" />
+              <p class="block4__cards-header">4. Взгляд монтажёра</p>
+              <p>
+                15 сентября 20:00 <br />
+                Данила Кузнецов
+              </p>
+            </div>
+            <div class="block4__element">
+              <img src="./assets/img/Rectangle 14.png" alt="" />
+              <p class="block4__cards-header">5. Жанры в кино</p>
+              <p>
+                17 сентября 20:00 <br />
+                Данила Кузнецов
+              </p>
+            </div>
+            <div class="block4__element">
+              <img src="./assets/img/Rectangle 15.png" alt="" />
+              <p class="block4__cards-header">6. Язык кино. Семинар</p>
+              <p>
+                20 сентября 13:00 <br />
+                Данила Кузнецов
+              </p>
+            </div>
+            <div class="block4__element">
+              <img src="./assets/img/Rectangle 19.png" alt="" />
+              <p class="block4__cards-header">7. Взгляд кинокритика</p>
+              <p>
+                21 сентября 19:00 <br />
+                Дмитрий Скворцов
+              </p>
+            </div>
+            <div class="block4__element">
+              <img src="./assets/img/Rectangle 20.png" alt="" />
+              <p class="block4__cards-header">8. Осознанный зритель. Семинар</p>
+              <p style="margin-top: -3px">
+                22 сентября 19:00 <br />
+                Дмитрий Скворцов
+              </p>
+            </div>
           </div>
         </div>
       </div>
       <div class="block5">
-        <div class="block5__container">
+        <div class="block5__container container">
           <div>
             <h1 class="block5__header">Курс прошло уже 1616 человек</h1>
           </div>
